@@ -8,6 +8,8 @@ import mod.azure.hwg.util.registry.HWGParticles;
 import mod.azure.hwg.util.registry.ProjectilesEntityRegister;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+import net.minecraft.block.Block;
+import net.minecraft.block.Blocks;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.LivingEntity;
@@ -20,6 +22,7 @@ import net.minecraft.sound.SoundEvent;
 import mod.azure.hwg.util.registry.HWGSounds;
 import net.minecraft.util.hit.BlockHitResult;
 import net.minecraft.util.hit.EntityHitResult;
+import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
 
@@ -102,6 +105,10 @@ public class GrayFlareEntity extends PersistentProjectileEntity {
 	@Override
 	protected void onBlockHit(BlockHitResult blockHitResult) {
 		super.onBlockHit(blockHitResult);
+		if (this.isAlive())
+			world.setBlockState(blockHitResult.getBlockPos().offset(Direction.UP), Blocks.LIGHT.getDefaultState(), Block.NOTIFY_NEIGHBORS);
+		if (this.isRemoved())
+			world.setBlockState(blockHitResult.getBlockPos().offset(Direction.UP), Blocks.AIR.getDefaultState(), Block.NOTIFY_NEIGHBORS);
 		this.setSound(HWGSounds.FLAREGUN);
 	}
 
